# GmailWrapper

./: .gitignore  CLAUDE.md  README.md  core_requirements.in  core_requirements.txt  dev_requirements.in  dev_requirements.txt  pyproject.toml  test_data.csv
.claude/: settings.local.json
gmailwrapper/: __init__.py  api.py  auth.py  client.py  config.py  exceptions.py
gmailwrapper/resources/: __init__.py  base.py  drafts.py  messages.py  threads.py
src/: api.py  consts.py
