[tool.ruff]
lint.select = ["E", "F", "B"]
#select = ["E", "F", "I", "PL", "I", "B"]
lint.ignore = []
lint.ignore-init-module-imports = true
lint.unfixable = []
fix = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

line-length = 80

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405", "E501"]
"consts.py" = ["E501"]

[tool.black]
line-length = 80
target-version = ['py310', 'py311', 'py312']
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
[tool.isort]
profile = "black"
line_length = 80

[project]
name = "gmail_wrapper"
authors = [
    { name="Francis Secada", email="francis.secada@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "1.0.0b0"
dependencies = [
    "anyio==4.9.0",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "google-api-core==2.24.2",
    "google-api-python-client==2.169.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "google-auth==2.40.1",
    "googleapis-common-protos==1.70.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "idna==3.10",
    "loguru==0.7.3",
    "oauthlib==3.2.2",
    "proto-plus==1.26.1",
    "protobuf==6.31.0",
    "pyasn1-modules==0.4.2",
    "pyasn1==0.6.1",
    "pyparsing==3.2.3",
    "requests-oauthlib==2.0.0",
    "requests==2.32.3",
    "rsa==4.9.1",
    "sniffio==1.3.1",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "win32-setctime==1.2.0",
]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
    "ruff>=0.11.4",
]

packages = ['gmail_wrapper']
