[tool.ruff]
lint.select = ["E", "F", "B"]
#select = ["E", "F", "I", "PL", "I", "B"]
lint.ignore = []
lint.ignore-init-module-imports = true
lint.unfixable = []
fix = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

line-length = 80

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405", "E501"]
"consts.py" = ["E501"]

[tool.black]
line-length = 80
target-version = ['py310', 'py311', 'py312']
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
[tool.isort]
profile = "black"
line_length = 80

[project]
name = "gmailwrapper"
authors = [
    { name="Francis Secada", email="francis.secada@gmail.com" },
]
description = "A modern, async-first Python library for seamless Gmail API integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["gmail", "email", "api", "async", "google"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
version = "0.0.2"
dependencies = [
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
]

[project.urls]
Homepage = "https://github.com/fsecada01/GmailWrapper"
Repository = "https://github.com/fsecada01/GmailWrapper.git"
Issues = "https://github.com/fsecada01/GmailWrapper/issues"
Changelog = "https://github.com/fsecada01/GmailWrapper/releases"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gmailwrapper*"]

[tool.setuptools.package-data]
gmailwrapper = ["py.typed"]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pylint>=3.3.8",
    "ruff>=0.12.11",
]
